--- a/index.html
+++ b/index.html
@@ -3,19 +3,10 @@
 
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, shrink-to-fit=no, viewport-fit=cover">
 <title>多合一图床 - Cdn图床,百度图床,阿里图床,京东图床,搜狗图床,搜狐图床,QQ图床,58图床,头条图床,网易图床,360图床,葫芦侠图床-OLEOU</title>
-<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/tdouguo/pic/img/32.png">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tdouguo/pic/css/style.css">
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/gh/tdouguo/pic/js/file.js"></script>
-  <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?f9dc3c120284a64448aa9ea5e5f84cbf";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
+<link rel="shortcut icon" href="/img/32.png">
+<link rel="stylesheet" href="/css/style.css">
+<script src="https://lib.baomitu.com/jquery/3.6.0/jquery.min.js"></script>
+<script src="/js/file.js"></script>
 
 </head>
 <body>
@@ -68,14 +59,14 @@ var _hmt = _hmt || [];
 <script src="https://pv.sohu.com/cityjson?ie=utf-8"></script>
 <script>document.write(returnCitySN["cname"]+" | "+returnCitySN["cip"])</script>
 
-| 切勿传输违反国家法规的图片和个人隐私图片
-| <a style="text-decoration:none;" href="https://github.com/tdouguo/pic">Github</a>
+ 切勿传输违反国家法规的图片和个人隐私图片
+<!--| <a style="text-decoration:none;" href="https://github.com/tdouguo/pic">Github</a>
 | <a style="text-decoration:none;" href="https://www.oleou.com/">OLEOU</a>
-| <a style="text-decoration:none;" href="https://image.kieng.cn/">kieng</a>
+| <a style="text-decoration:none;" href="https://image.kieng.cn/">kieng</a>-->
   
 </p>
 </div>
 </div>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/gh/tdouguo/pic/js/tj.js" charset="utf-8"></script>
+<script type="text/javascript" src="/js/tj.js" charset="utf-8"></script>
 
 </body></html>
